sample-room/build/cluster/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: localhost:5000/frontend:ansible
        imagePullPolicy: Always
      securityContext:
        runAsUser: 0
        privileged: true
      nodeSelector:
        tier: frontend
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    app: frontend
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notadmin
  namespace: default
spec:
  selector:
    matchLabels:
      app: notadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: notadmin
    spec:
      containers:
      - name: notadmin
        image: localhost:5000/notadmin:ansible
        imagePullPolicy: Always
      nodeSelector:
        tier: frontend
---
kind: Service
apiVersion: v1
metadata:
  name: notadmin
  namespace: default
spec:
  selector:
    app: notadmin
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: frontend
        image: localhost:5000/backend:ansible
        imagePullPolicy: Always
      nodeSelector:
        tier: backend
      securityContext:
        runAsUser: 0
        privileged: true
---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /frontend(/|$)(.*)
        backend:
          service:
            name: frontend
            port:
              number: 80
